--- a/css/styles.css
+++ b/css/styles.css
@@ -41,8 +41,25 @@
   background-color: #444444;
   right: 0; }
 
+.header {
+  height: 338px; }
+  @media (max-width: 575px) {
+    .header {
+      height: 40vh; } }
+
+h4.moon {
+  text-align: center;
+  position: absolute;
+  z-index: 980;
+  width: 66%;
+  margin-top: 10%;
+  left: 18vw; }
+
 .footer {
   height: 100px; }
+
+.grid {
+  display: block; }
 
 .nav {
   width: 10%;
@@ -51,7 +68,7 @@
   float: left;
   margin-top: 25vh;
   padding-right: 8vw;
-  margin-left: 80%; }
+  margin-left: 83%; }
 
 #myNavbar {
   z-index: 999; }
@@ -86,6 +103,11 @@ a {
 body {
   display: flex;
   justify-content: center; }
+
+button {
+  background: none;
+  color: white;
+  border: none; }
 
 .episode-cover {
   width: 100%;
