--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,3 +1,16 @@
 .header {
-  height: 200px;
+  height: 338px;
+
+  @media #{$mobile} {
+    height: 40vh;
+  }
+}
+
+h4.moon {
+  text-align: center;
+  position: absolute;
+  z-index: 980;
+  width: 66%;
+  margin-top: 10%;
+  left: 18vw;
 }
