--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,20 @@
 .moon {
   font-family: moon; }
 
+.scrollTop {
+  width: 100px;
+  background-color: #90fef8;
+  text-align: center;
+  margin-left: -50px;
+  margin-top: 39px;
+  border-radius: 10px; }
+
+.scrollTop:hover {
+  cursor: pointer; }
+
+.scrollTop:active {
+  background-color: blue; }
+
 .header img {
   width: 100%;
   height: 360px; }
@@ -51,15 +65,12 @@ h4.moon {
   text-align: center;
   position: absolute;
   z-index: 980;
-  width: 66%;
-  margin-top: 10%;
-  left: 18vw; }
+  width: 45%;
+  margin-top: 8%;
+  left: 27vw; }
 
 .footer {
   height: 100px; }
-
-.grid {
-  display: block; }
 
 .nav {
   width: 10%;
@@ -86,11 +97,16 @@ a {
 @media (max-width: 575px) {
   .nav {
     margin: 0;
-    margin-top: 30px; }
+    margin-top: 30px;
+    margin-left: 10px; }
+
+  .navbar-header {
+    margin-left: 136px;
+    margin-top: -9px; }
 
   #myNavbar {
-    margin-top: -65px;
-    margin-left: 55px; }
+    margin-top: -55px;
+    margin-left: 65px; }
 
   li {
     width: 100px !important; }
@@ -108,6 +124,10 @@ button {
   background: none;
   color: white;
   border: none; }
+
+.main-logo {
+  width: 8vw;
+  margin: 21px; }
 
 .episode-cover {
   width: 100%;
@@ -141,20 +161,22 @@ button {
     width: 30%; }
 
   .column-4:last-child {
-    width: 60%;
-    height: 130px;
+    width: 30%;
+    height: auto;
     margin: 0px !important; }
 
   .grid {
     display: flex;
     justify-content: center;
-    flex-wrap: wrap; } }
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+    height: auto; } }
 @media (max-width: 575px) {
   .column-4 {
     width: 70% !important;
     float: none;
-    margin: 20px !important;
-    height: 300px !important; }
+    margin-bottom: 87px !important;
+    height: 284px !important; }
 
   .grid {
     display: flex;
