--- a/scss/layout/_navigation.scss
+++ b/scss/layout/_navigation.scss
@@ -11,7 +11,7 @@
 
 
 #myNavbar {
-  z-index: 999;
+  z-index: $z-index-top;
 }
 
 li {
@@ -35,10 +35,17 @@ a {
   .nav {
     margin: 0;
     margin-top: 30px;
+    margin-left: 10px;
   }
+
+  .navbar-header {
+    margin-left: 136px;
+    margin-top: -9px;
+  }
+
   #myNavbar {
-    margin-top: -65px;
-    margin-left: 55px;
+    margin-top: -55px;
+    margin-left: 65px;
   }
   li {
     width: 100px !important;
